# label_wires_rust

./: Cargo.toml
resources/config/: settings.json
resources/locales/: en.json
src/: lib.rs
src/command/: command.rs  command_manager.rs  mod.rs
src/config/: settings.rs
src/controllers/: controller.rs
src/models/: connection.rs  connection_manager.rs
src/ui/: mod.rs  theme.rs
src/ui/views/: main_view.rs  mod.rs
src/ui/views/states/: file_operation_state.rs  main_window_state.rs  mod.rs  settings_state.rs
src/utils/: command_manager.rs  csv_exporting_strategy.rs  file_handler.rs  localizer.rs  mod.rs
