[package]
name = "label_wires"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
config = "0.14.0"
csv = "1.3.0"
iced = {version = "0.12.0", features = ["advanced", "multi-window"]}
iced_core = "0.12.0"
once_cell = "1.19.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = {version = "1.7.0", features = ["serde", "v4"]}

[dev-dependencies]
tokio-test = "0.4.3"
